# Meridian-Canon

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  conftest.py  cookbook.sql  drop_all.sql  pyproject.toml  seed.sql
.github/workflows/: ci.yml
dev/: Dockerfile  apply.sh  docker-compose.yml  reset_data.sql
meridian/: __init__.py
meridian/canon/: __init__.py  admissibility_auditor.py  canonicalize.py  cli.py  emit.py  hashing.py  keys.py  schema.py  signing.py  transparency.py  walk.py
meridian/canon/tests/: conftest.py  test_auditor.py  test_canonicalize.py  test_dsse.py  test_emit_walk.py  test_schema.py  test_transparency.py  test_transparency_inclusion.py  test_trust_anchor.py  test_walk_transparency.py
meridian/export/: __init__.py  brief.py  pdf.py
meridian/export/tests/: test_brief.py  test_pdf_backends.py
meridian/findings/: __init__.py  _base.py  _spans.py  call.py  email.py  enm.py  file.py  lm_extractor.py  lm_langextract.py  lm_vllm.py  outlines_extractor.py  presidio_extractor.py  regex_extract.py  rich_schema.py  runner.py  sms.py  voice_memo.py  voicemail.py
meridian/findings/tests/: conftest.py  test_email_extractor.py  test_email_extractor_spans.py  test_enm.py  test_other_extractors.py  test_outlines_extractor.py  test_presidio_extractor.py  test_regex_audit_fixes.py  test_silent_loss_fixes.py  test_spans.py
meridian/forensics/: __init__.py  coc.py  kinetics.py  lit.py
meridian/pipeline/: definitions.py  jobs.py  resources.py
meridian/pipeline/assets/: brief.py  enrich.py  ingest.py  refute_assets.py  seal_asset.py
meridian/query/: __init__.py  attestation.py  embeddings.py  reranker.py  rrf.py  search.py
meridian/query/tests/: test_attestation.py  (+3 more)
meridian/refute/: __init__.py  adversarial.py  consistency.py  counter_evidence.py  coverage.py  harness.py  inspect_tasks.py  lm.py  replay.py
meridian/witness/: __init__.py  c2pa_adapter.py  local_chunker.py  unstructured_adapter.py  wrapper.py
schema/: 00_setup.sql  10_core.sql  20_provenance.sql  30_documents.sql  40_communications.sql  50_recordings.sql  60_court.sql  70_financial_telephony.sql  80_telemetry.sql  85_legal.sql  87_compliance.sql  90_workers_correlations.sql  95_views_indexes.sql  97_supabase.sql  99_rls.sql  A0_attestations.down.sql  A0_attestations.sql  B0_chunks_fts.down.sql  B0_chunks_fts.sql  B1_paradedb_fts.sql  B2_pgvectorscale.sql  C0_entities_resolution.down.sql  C0_entities_resolution.sql  D0_citations.down.sql  D0_citations.sql  D1_enrichments.sql  E0_rekor.sql
(+10 files in other folders)
