[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-canon"
version = "0.2.0"
description = "Canon-conformant attestation layer for digital evidence systems"
authors = [{name = "NORA Foundation"}]
license = {text = "LicenseRef-NORA-Canon-Evaluation-Commentary-1.0"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42",
    "rfc8785>=0.1.4",
    "keyring>=24",
    "ulid-py>=1.1",
    "psycopg[binary,pool]>=3.1",
    "reportlab>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.1", "keyrings.alt>=5.0"]
embed = ["fastembed>=0.3"]
dsse = ["dsse>=0.2"]
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]
outlines = ["outlines>=0.1"]
inspect = ["inspect-ai>=0.3"]
unstructured = ["unstructured[pdf,email]>=0.14"]
c2pa = ["c2pa-python>=0.6"]
langfuse = ["langfuse>=2.0"]
transparency = ["sigstore>=3.0"]
pipeline = ["dagster>=1.7", "litellm>=1.40"]

[project.scripts]
meridian-canon = "meridian.canon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["meridian*"]

[tool.pytest.ini_options]
testpaths = [
    "meridian/canon/tests",
    "meridian/witness/tests",
    "meridian/refute/tests",
    "meridian/findings/tests",
    "meridian/query/tests",
    "meridian/export/tests",
    "meridian/pipeline/tests",
]
addopts = "-q"
